--- a/index.html
+++ b/index.html
@@ -5,10 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Strategy Team Decision Tool - Fathom Insight Management</title>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Lato:ital,wght@0,400;1,400&display=swap');
-        
         body {
-            font-family: 'Lato', sans-serif;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
             margin: 0;
             padding: 20px;
             background: #404a59;
@@ -46,7 +44,7 @@
         }
 
         .header h1 {
-            font-family: 'Montserrat', sans-serif;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
             font-size: 2.5rem;
             margin: 15px 0 10px 0;
             font-weight: 700;
@@ -55,7 +53,7 @@
         }
 
         .header p {
-            font-family: 'Lato', sans-serif;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
             font-size: 1.2rem;
             opacity: 0.9;
             margin: 0;
@@ -76,7 +74,7 @@
         }
 
         .intro-screen h2 {
-            font-family: 'Montserrat', sans-serif;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
             font-size: 2rem;
             color: #404a59;
             margin-bottom: 20px;
@@ -100,7 +98,7 @@
         }
 
         .weighting-options h3 {
-            font-family: 'Lato', sans-serif;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
             font-style: italic;
             margin: 0 0 20px 0;
             color: #404a59;
@@ -211,7 +209,7 @@
         }
 
         .answer-btn strong {
-            font-family: 'Lato', sans-serif;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
             font-weight: 400;
             font-style: italic;
             display: block;
@@ -237,7 +235,7 @@
         }
 
         .result-title {
-            font-family: 'Montserrat', sans-serif;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
             font-size: 2.5rem;
             margin-bottom: 20px;
             font-weight: 700;
@@ -246,7 +244,7 @@
         }
 
         .result-subtitle {
-            font-family: 'Lato', sans-serif;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
             font-size: 1.3rem;
             opacity: 0.9;
             margin-bottom: 25px;
@@ -263,7 +261,7 @@
         }
 
         .result-reasons h4 {
-            font-family: 'Lato', sans-serif;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
             margin: 0 0 15px 0;
             font-size: 1.2rem;
             font-style: italic;
@@ -320,7 +318,7 @@
             font-size: 1rem;
             font-weight: 600;
             transition: all 0.3s ease;
-            font-family: 'Lato', sans-serif;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
         }
 
         .nav-btn:hover {
@@ -352,7 +350,7 @@
         }
 
         .score-display h4 {
-            font-family: 'Lato', sans-serif;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
             margin: 0 0 15px 0;
             color: #ffffff;
             font-style: italic;
